examples/test/testpolicy12195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12195
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key27: value34
      key13: value43
      key20: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value43
          key27: value0
          key36: value42
      podSelector:
        matchLabels:
          key26: value10
          key44: value15
          key38: value47
